--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'com.txusballesteros:FitChart:1.0'
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
